<resources>
    <string name="app_name">百姓管家</string>
    <string name="string1">什么是人脸认证 ？</string>
    <string name="string2">人脸认证是独立的第三方信用评估及信用管理机构，为蚂蚁金服旗下品牌之一。</string>
    <string name="string3">使用人脸认证的用户仅需要提供姓名、身份证号、人像照片等信息，即刻核实认证人的身份真实性。 </string>
    <string name="string4">百姓管家</string>
    <string name="string5">（收货不便时，可选择其他就近提货地点）</string>
    <string name="string6">提货地址：</string>
    <string name="string7">多参数监护仪CMS8000心电仪多参数监护仪</string>
    <string name="string8">颜色分类：热销腋下体温计</string>
    <string name="string9">石家庄众美城B区14号楼店</string>
    <string name="string10">河北省石家市裕华区石家庄众美城B区14号楼2单元103室</string>
    <string name="string11">13091617887</string>
    <string name="string12">购买成功</string>
    <string name="string13">您的商品兑换码为</string>
    <string name="string14">可在订单详情中查看</string>
    <string name="string15">我知道了</string>
    <string name="string16">请输入搜索商品的关键字</string>

    <string name="string17">奔驰GL级2015款GL400 3.0 手自一体4MATIC豪华型-精品</string>
    <string name="string18">2016年-2.8万公里</string>
    <string name="string19">信息真实 绝对靠谱</string>

    <string name="string20">急急急急急积极江苏省苏州市工业园区直属镇工业园区星湖街 328 号创意产业园 22 幢 203 室</string>
    <string name="string21">精装修  114平</string>
    <string name="string22">个人iphone7Plus</string>
    <string name="title_activity_my_feed_back">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="loginFail">登录失败</string>
    <string name="successUpdatePass">修改成功，请登录</string>
    <string name="commonFail">网络异常请稍后再试</string>
    <string name="codenotnull">验证码不能为空</string>
    <string name="codeerror">验证码错误</string>
    <string name="passmore">密码大于6位</string>
    <string name="passnotnull">请输入电话号码</string>
    <string name="phonenotnull">电话号码不能为空</string>
    <string name="inputrightphone">请输入正确的电话号码</string>
    <string name="sendsuccess">发送成功</string>
    <string name="sendfail">发送失败</string>
    <string name="updatePassFail">重置密码失败</string>
    <string name="phoneNotRegister">手机号未注册</string>
    <string name="requestVerification">获取验证码</string>
    <string name="sendVerification">发送验证码</string>
    <string name="phoneAlreadyExist">手机号已注册</string>
    <string name="registerFail">注册失败</string>
    <string name="registerSuccess">注册成功</string>
    <string name="update">修改</string>
    <string name="preview">预览</string>
    <string name="complete">完成</string>
    <string name="dataNull">快去发布信息吧！</string>
    <string name="mingxidataNull">暂无明细！</string>
    <string name="dataMessageNull">暂无消息！</string>
    <string name="dataNoticeNull">暂无预告！</string>
    <string name="dataOrderNull">暂无订单！</string>
    <string name="dataNullFeedback">还没有反馈！</string>
    <string name="allCity">全城</string>
    <string name="allQu">全区</string>
    <string name="sortType">类型</string>
    <string name="sortPosition">职位</string>
    <string name="sortHangye">行业</string>
    <string name="sortScale">价格</string>
    <string name="sortStore">发布人</string>
    <string name="buxian">不限</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="toastSearch">请输入搜索内容</string>
    <string name="isCollect">收藏</string>
    <string name="alreadyCollect">已收藏</string>
    <string name="alreadyRemind">已设置提醒</string>
    <string name="notRemind">提醒我</string>
    <string name="notLogin">用户未登录，是否跳转到登录界面？</string>
    <string name="yes">确定</string>
    <string name="collectFail">收藏失败</string>
    <string name="collectNumMax">收藏数量达到上限30条</string>
    <string name="uploadPic">上传照片</string>
    <string name="carFabu">二手汽车发布</string>
    <string name="selectType">选择类别</string>
    <string name="title">标题</string>
    <string name="miaoshu">描述</string>
    <string name="firstTime">首次上牌时间</string>
    <string name="carPrice">价格</string>
    <string name="wanyuan">万元</string>
    <string name="licheng">行驶里程</string>
    <string name="wangongli">万公里</string>
    <string name="lianxiren">联系人</string>
    <string name="phone">手机号</string>
    <string name="carAddress">看车地址</string>
    <string name="toasttype">请选择类别</string>
    <string name="toastTitle">请输入标题</string>
    <string name="toastZhaiyao">请输入摘要</string>
    <string name="toastMiaoshu">请输入描述内容</string>
    <string name="toastprice">请输入价格</string>
    <string name="toastFirstTime">请选择首次上牌时间</string>
    <string name="toastLicheng">请输入行驶里程</string>
    <string name="toastLianxiren">请输入联系人</string>
    <string name="toastPhone">请输入手机号</string>
    <string name="toastCarAddress">请选择看车地址</string>
    <string name="toastStoreName">请输入商家名称</string>
    <string name="toastCompanyName">请输入公司名称</string>
    <string name="toastHouseType">请选择户型</string>
    <string name="toastGoodsType">请选择商品类型</string>
    <string name="toastPositionType">请选择职位</string>
    <string name="toastIndustryType">请选择行业</string>
    <string name="toastjichengxin">请输入几成新</string>
    <string name="toastSalary">请选择薪资</string>
    <string name="toastFuli">请选择福利</string>
    <string name="toastMianji">请输入面积</string>
    <string name="toastPrice">请输入价格</string>
    <string name="toastBuyPrice">请输入购入价格</string>
    <string name="uploadFail">上传失败，请重新上传</string>
    <string name="uploadSuccess">恭喜你上传成功，是否跳转到我的发布查看已上传内容？</string>
    <string name="uploadBack">确定退出发布？</string>
    <string name="deleteMessage">确认删除该消息？</string>
    <string name="cancelCollect">确认取消收藏？</string>
    <string name="sureOffline">确认下线？</string>
    <string name="sureDelete">确认删除？</string>
    <string name="store">商家</string>
    <string name="xunren">寻人</string>
    <string name="xunwu">寻物</string>
    <string name="shanxing">善行</string>
    <string name="geren">个人</string>
    <string name="cartype">汽车服务</string>
    <string name="housetype">房产服务</string>
    <string name="housekeepingType">家政服务</string>
    <string name="educationType">教育服务</string>
    <string name="gonyiType">公益</string>
    <string name="recruitType">招聘服务</string>
    <string name="idlegoodsType">二手物品服务</string>
    <string name="contactMethod">预约一下获取TA的联系方式</string>
    <string name="yuyue">预约</string>
    <string name="yuyueSuccess">预约成功</string>
    <string name="yuyueFail">预约失败</string>
    <string name="yuyueSuccessPromot">您可以在个人中心-预约列表中进行查看~</string>
    <string name="yuyueSuccessPromot2">是否跳转到个人中心-预约列表中进行查看~</string>
    <string name="yezhu_feedback">业主反馈中心</string>
    <string name="setting_push">推送通知</string>
    <string name="signout">退出登录</string>
    <string name="version_update">版本更新</string>
    <string name="about_us">关于我们</string>
    <string name="hot_phone">客服热线</string>
    <string name="hot_phone_num">400-668-4562</string>
    <string name="setting">设置</string>
    <string name="pleaseLogin">请登录</string>
    <string name="myHeader">我的头像</string>
    <string name="selectUploadTishi">请选择正确的图片</string>
    <string name="pleasePutnickname">请输入昵称</string>
    <string name="uploadsuccess">上传成功</string>
    <string name="toastSelectXiaoqu">请选择小区</string>
    <string name="toastAddress">请输入地址</string>
    <string name="toastSelectAddress">请输入地址</string>
    <string name="toastLoaction">请选择位置</string>
    <string name="addMyCell">添加我的小区</string>
    <string name="updateMyCell">修改我的小区</string>
    <string name="updateNickname">修改昵称</string>
    <string name="hotGoodsShow">件已售 仅剩</string>
    <string name="noticeGoodsShow">开抢</string>
    <string name="selectGuigeToast">请选择规格</string>
    <string name="selectBuynum">请选择购买数量</string>
    <string name="myAreaseActivity">我的小区</string>
    <string name="rentPrice">租金</string>
    <string name="sellPrice">售价</string>
    <string name="selectAddressTitle">选择提货地址</string>
    <string name="confirmOrderTitle">确认订单</string>
    <string name="selectAddressSucc">选择地址成功</string>
    <string name="selectAddressFailed">选择地址失败，请稍后再试！</string>
    <string name="selectAreaHint">城市/行政区/拼音</string>
    <string name="hintEdittextCartitle">用一句话描述你的爱车吧~</string>
    <string name="hintEdittextCardetail">详细的描述会吸引更多的顾客~</string>
    <string name="hintEdittextCardetailAc">可介绍爱车的品牌 颜色 车况 可否议价等</string>
    <string name="hintEdittextDesAc">请输入详细描述~</string>
    <string name="hintEdittextPhoneSetting">平台开启隐私保护设置</string>
    <string name="unitPricemonth">元/月</string>
    <string name="unitPrice">万元</string>
    <string name="housePrice">房价</string>
    <string name="idle_title_release">给宝贝起个响亮的名字吧~</string>
    <string name="hint_company_name">请输入公司名称~</string>
    <string name="hint_work_address">请输入工作区域~</string>
    <string name="collectXiaxian">您收收藏的已下线~</string>
    <string name="feedbackSuccess">反馈成功~</string>
    <string name="comment_fail">评论失败请稍后再试~</string>
    <string name="comment_success">评论成功~</string>
    <string name="toast_service_delete">该服务已被删除~</string>
    <string name="toast_reprot_reason">请选择举报原因~</string>
    <string name="toast_not_appoinment_yourself">您不可预约自己发布的信息~</string>
    <string name="toast_report_success">举报成功！~</string>
    <string name="toast_report_fail">举报失败！~</string>
    <string name="addressHint">请输入搜索关键字</string>
    <string name="perfectInfo">请完善信息</string>
    <string name="giveSliverPromt">欢迎来到百姓管家，为表诚意赠与您白银1000两~</string>
    <string name="giveSliverDes">发布信息会消耗白银，购买商品可获得黄金奖励，黄金积累够一定数量可抵扣部分物业费。</string>
    <string name="paySilver">您需要支付一两白银</string>
    <string name="paySuccess">购买成功</string>
    <string name="count">账户余额（两）</string>
    <string name="gold">黄金</string>
    <string name="silver">白银</string>
    <string name="mingxi">明细</string>
    <string name="nogold">您还没有黄金！</string>
    <string name="goldDealTitle">黄金收支明细</string>
    <string name="silverDealTitle">白银收支明细</string>
    <string name="hintGold">请输入消费的黄金数量</string>
    <string name="dikouwuyefei">抵扣物业费</string>
    <string name="huangjinbuzu">黄金不足</string>
    <string name="myareasnotdata">暂无小区消息</string>
    <string name="system_message">系统消息</string>
    <string name="action_message">活动消息</string>
    <string name="toast_feedback_content">反馈内容不能为空</string>
    <string name="toast_right_phone">请输入联系方式</string>
    <string name="list">列表</string>
    <string name="pay">支付</string>
    <string name="select_address">选择地区</string>
    <string name="sure_select">确认选择</string>
    <string name="toast_select_areas">请选择小区</string>


</resources>
