<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="@dimen/x300"
              android:layout_height="wrap_content"
              android:background="@drawable/background_corner_white"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string12"
        android:textColor="@color/black343"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x15"
        android:text="@string/string13"
        android:textColor="@color/grayText"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x10"
        android:text="2307041234567896"
        android:textColor="@color/redTopic"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x10"
        android:text="@string/string14"
        android:textColor="@color/grayText"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x15"
        android:background="@drawable/background_corner_button_bluetopic_color"
        android:paddingBottom="@dimen/x8"
        android:paddingLeft="@dimen/x20"
        android:paddingRight="@dimen/x20"
        android:paddingTop="@dimen/x8"
        android:text="@string/string15"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"/>


</LinearLayout>