<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/x100"
              android:background="@color/colorWhite"
              android:descendantFocusability="blocksDescendants"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/x10"
        android:paddingTop="@dimen/x10">

        <LinearLayout
            android:id="@+id/linear_checkbox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x10"
            android:layout_weight="1"
            android:gravity="top|left"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x5"
                android:button="@null"
                android:focusable="false"
                android:drawableLeft="@drawable/radiogroup_pay_select"
                android:visibility="visible"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingRight="@dimen/x10">

            <TextView
                android:id="@+id/home_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string9"
                android:textColor="@color/redFA2"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="地址："
                    android:textColor="@color/grayText"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string10"
                    android:textColor="@color/grayText"
                    android:textSize="14sp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="电话："
                    android:textColor="@color/grayText"/>

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string11"
                    android:textColor="@color/grayText"
                    android:textSize="14sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/x10"
            android:layout_weight="1"
            android:gravity="top|right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/grayText"
                android:textSize="12sp"/>

        </LinearLayout>


    </LinearLayout>

    <View
        style="@style/grayline"
        />

</LinearLayout>